mingw-w64-cross-mingwarm64-headers: GCC bootstrap part 1

--- a/mingw-w64-cross-mingwarm64-headers/PKGBUILD
+++ b/mingw-w64-cross-mingwarm64-headers/PKGBUILD
@@ -56,9 +56,9 @@ _package() {
   cd ${srcdir}/headers-${_target}
   make DESTDIR=${pkgdir} install
 
-  rm ${pkgdir}/opt/${_target}/include/pthread_signal.h
-  rm ${pkgdir}/opt/${_target}/include/pthread_time.h
-  rm ${pkgdir}/opt/${_target}/include/pthread_unistd.h
+  #rm ${pkgdir}/opt/${_target}/include/pthread_signal.h
+  #rm ${pkgdir}/opt/${_target}/include/pthread_time.h
+  #rm ${pkgdir}/opt/${_target}/include/pthread_unistd.h
 }
 
 build() {
