--- a/mingw-w64-cross-mingwarm64-gcc/PKGBUILD
+++ b/mingw-w64-cross-mingwarm64-gcc/PKGBUILD
@@ -7,7 +7,7 @@ _targetpkgs=("${_mingw_suff}-mingwarm64-${_realname}")
 pkgname=("${_targetpkgs[@]}")
 _realver=15.0.0
 pkgver=15.0.0dev
-pkgrel=2
+pkgrel=0
 pkgdesc="Cross GCC for the MinGW-w64"
 arch=('aarch64' 'i686' 'x86_64')
 url="https://gcc.gnu.org"
@@ -19,8 +19,9 @@ msys2_references=(
 groups=("${_mingw_suff}-toolchain" "${_mingw_suff}")
 depends=("zlib" "mpc" "isl" "libzstd")
 makedepends=("gcc" 'lndir' "gmp-devel" "mpc-devel" "zlib-devel" "isl-devel" 'autotools' 'gperf' 'libzstd-devel'
-             "${_mingw_suff}-mingwarm64-crt" "${_mingw_suff}-mingwarm64-headers" "${_mingw_suff}-mingwarm64-winpthreads"
-             "${_mingw_suff}-mingwarm64-windows-default-manifest" "${_mingw_suff}-mingwarm64-binutils" "git")
+             "${_mingw_suff}-mingwarm64-headers" # "${_mingw_suff}-mingwarm64-crt"
+             # "${_mingw_suff}-mingwarm64-windows-default-manifest" "${_mingw_suff}-mingwarm64-winpthreads"
+             "${_mingw_suff}-mingwarm64-binutils" "git")
 #checkdepends=('dejagnu')
 options=('!strip' 'staticlibs' '!emptydirs' '!buildflags')
 _commit='f9667acd4ca73941cca10aeecab52f58640297e2'
@@ -114,6 +115,7 @@ _build() {
   _target=$1
   export lt_cv_deplibs_check_method='pass_all'
 
+  rm -fr ${srcdir}/gcc-build-${_target}
   mkdir -p ${srcdir}/gcc-build-${_target} && cd ${srcdir}/gcc-build-${_target}
 
   local _langs="c,lto,c++"
@@ -168,14 +170,14 @@ _build() {
     CFLAGS="-O2 -pipe" \
     CXXFLAGS="-O2 -pipe"
 
-  make all
+  make all-gcc
 }
 
 _package() {
   _target=$1
   cd ${srcdir}/gcc-build-${_target}
-  make -j1 DESTDIR=${pkgdir} install
-  mv ${pkgdir}/opt/lib/gcc/${_target}/libgcc*.dll ${pkgdir}/opt/lib/gcc/${_target}/${_realver}/
+  make -j1 DESTDIR=${pkgdir} install-gcc
+  #mv ${pkgdir}/opt/lib/gcc/${_target}/libgcc*.dll ${pkgdir}/opt/lib/gcc/${_target}/${_realver}/
   for _f in ${pkgdir}/opt/bin/*.exe; do
     strip -s ${_f}
   done
@@ -196,10 +198,10 @@ build() {
 package_mingw-w64-cross-mingwarm64-gcc() {
   conflicts=("${_mingw_suff}-${_realname}<=14.2.0-1")
   depends+=(
-    "${_mingw_suff}-mingwarm64-crt"
+    #"${_mingw_suff}-mingwarm64-crt"
     "${_mingw_suff}-mingwarm64-headers"
-    "${_mingw_suff}-mingwarm64-winpthreads"
-    "${_mingw_suff}-mingwarm64-windows-default-manifest"
+    #"${_mingw_suff}-mingwarm64-winpthreads"
+    #"${_mingw_suff}-mingwarm64-windows-default-manifest"
     "${_mingw_suff}-mingwarm64-binutils"
   )
   _package "aarch64-w64-mingw32"
