--- a/gcc/PKGBUILD
+++ b/gcc/PKGBUILD
@@ -2,7 +2,35 @@
 # Contributor: Martell Malone <martellmalone@gmail.com>
 # Contributor: Ray Donnelly <mingw.android@gmail.com>
 
-# toolchain build order: win32-api-headers->msys2-runtime->binutils->gcc->binutils->msys2-runtime
+# full toolchain build order:
+#   [install autotools_MSYS_packages] This might not be needed
+#   [run save-selected-old-dlls.sh] needed to save old ISL DLL
+#   # It appears to be a path length or depth related build bug; the path of
+#   # C:\git_repos\MSYS2-packages\msys2-runtime-3.3 works.
+#   msys2-runtime-3.3           needed to build mingw-w64-cross-mingwarm64-binutils and python and it is easier to upgrade first
+#   [Exit and Restart Msys2]
+#   gmp                       TODO
+#   mpfr                      TODO
+#   mpc                       TODO
+#   isl                       REDO needed by both cross and regular gcc and maybe binutils
+#   [run load-selected-old-dlls.sh]
+#   mingw-w64-cross-binutils  REDO   needed to build mingw-w64-cross-gcc     build with nocheck
+#   mingw-w64-cross-headers     needed to install mingw-w64-cross-gcc
+#   mingw-w64-cross-crt         needed to install mingw-w64-cross-gcc
+#   mingw-w64-cross-winpthreads needed to install mingw-w64-cross-gcc
+#   mingw-.-cross-.-manifest    needed to install mingw-w64-cross-gcc
+#   mingw-w64-cross-gcc       REDO   needed to build msys2-w32api-headers
+#   mingw-w64-cross-zlib
+#   msys2-w32api-headers
+#   msys2-w32api-runtime
+#   binutils                  REDO                                           build with nocheck
+#   windows-default-manifest
+#   gcc                       REDO
+#   libtool
+#   [run cleanup-selected-old-dlls.sh]
+#   binutils                  REDO                                          build with nocheck
+#   msys2-runtime-3.3         Doing
+#   [Exit and Restart Msys2]
 
 pkgbase=gcc
 pkgname=('gcc' 'gcc-libs')
