mingw-w64-cross-crt: _targetpkgs=("${_mingw_suff}-mingw32-${_realname}" "${_mingw_suff}-mingw64-${_realname}")

--- a/mingw-w64-cross-crt/PKGBUILD
+++ b/mingw-w64-cross-crt/PKGBUILD
@@ -4,7 +4,8 @@
 _realname=crt
 _mingw_suff=mingw-w64-cross
 pkgbase="${_mingw_suff}-${_realname}"
-_targetpkgs=("${_mingw_suff}-ucrt64-${_realname}" "${_mingw_suff}-mingw32-${_realname}" "${_mingw_suff}-mingw64-${_realname}")
+#_targetpkgs=("${_mingw_suff}-ucrt64-${_realname}" "${_mingw_suff}-mingw32-${_realname}" "${_mingw_suff}-mingw64-${_realname}")
+_targetpkgs=("${_mingw_suff}-mingw32-${_realname}" "${_mingw_suff}-mingw64-${_realname}")
 pkgname=("${_mingw_suff}-${_realname}" "${_targetpkgs[@]}")
 pkgver=12.0.0.r474.g9c93e483b
 pkgrel=1
