--- a/mingw-w64-cross-windows-default-manifest/PKGBUILD
+++ b/mingw-w64-cross-windows-default-manifest/PKGBUILD
@@ -3,7 +3,8 @@
 _realname=windows-default-manifest
 _mingw_suff=mingw-w64-cross
 pkgbase="${_mingw_suff}-${_realname}"
-_targetpkgs=("${_mingw_suff}-ucrt64-${_realname}" "${_mingw_suff}-mingw32-${_realname}" "${_mingw_suff}-mingw64-${_realname}")
+#_targetpkgs=("${_mingw_suff}-ucrt64-${_realname}" "${_mingw_suff}-mingw32-${_realname}" "${_mingw_suff}-mingw64-${_realname}")
+_targetpkgs=("${_mingw_suff}-mingw32-${_realname}" "${_mingw_suff}-mingw64-${_realname}")
 pkgname=("${_mingw_suff}-${_realname}" "${_targetpkgs[@]}")
 groups=("${_mingw_suff}-toolchain" "${_mingw_suff}")
 pkgver=6.4
