--- a/mingw-w64-cross-zlib/PKGBUILD
+++ b/mingw-w64-cross-zlib/PKGBUILD
@@ -3,7 +3,8 @@
 _realname=zlib
 _mingw_suff=mingw-w64-cross
 pkgbase="${_mingw_suff}-zlib"
-_targetpkgs=("${_mingw_suff}-ucrt64-${_realname}" "${_mingw_suff}-mingw32-${_realname}" "${_mingw_suff}-mingw64-${_realname}" "${_mingw_suff}-mingwarm64-${_realname}")
+#_targetpkgs=("${_mingw_suff}-ucrt64-${_realname}" "${_mingw_suff}-mingw32-${_realname}" "${_mingw_suff}-mingw64-${_realname}" "${_mingw_suff}-mingwarm64-${_realname}")
+_targetpkgs=("${_mingw_suff}-mingw32-${_realname}" "${_mingw_suff}-mingw64-${_realname}")
 pkgname=("${_mingw_suff}-${_realname}" "${_targetpkgs[@]}")
 pkgdesc="Compression library implementing the deflate compression method found in gzip and PKZIP"
 pkgver=1.3.1
@@ -14,7 +15,7 @@ msys2_repository_url="https://github.com/madler/zlib"
 license=('spdx:Zlib')
 groups=("${_mingw_suff}-toolchain" "${_mingw_suff}")
 depends=()
-makedepends=("${_mingw_suff}-gcc" "${_mingw_suff}-mingwarm64-gcc" 'autotools')
+makedepends=('autotools' "${_mingw_suff}-gcc") # "${_mingw_suff}-mingwarm64-gcc" )
 options=('!strip' '!buildflags')
 source=("https://github.com/madler/zlib/releases/download/v${pkgver}/zlib-${pkgver}.tar.xz"{,.asc}
         01-zlib-1.2.11-1-buildsys.mingw.patch
