--- a/gcc/PKGBUILD
+++ b/gcc/PKGBUILD
@@ -9,27 +9,28 @@
 #   # C:\git_repos\MSYS2-packages\msys2-runtime-3.3 works.
 #   msys2-runtime-3.3           needed to build mingw-w64-cross-mingwarm64-binutils and python and it is easier to upgrade first
 #   [Exit and Restart Msys2]
-#   gmp                       TODO
-#   mpfr                      TODO
-#   mpc                       TODO
-#   isl                       REDO needed by both cross and regular gcc and maybe binutils
+#   gmp
+#   mpfr
+#   mpc
+#   isl                       needed by both cross and regular gcc and maybe binutils
+#   [run save-selected-old-dlls.sh] needed to save new ISL DLL with cyg prefix
 #   [run load-selected-old-dlls.sh]
 #   mingw-w64-cross-binutils  REDO   needed to build mingw-w64-cross-gcc     build with nocheck
-#   mingw-w64-cross-headers     needed to install mingw-w64-cross-gcc
-#   mingw-w64-cross-crt         needed to install mingw-w64-cross-gcc
-#   mingw-w64-cross-winpthreads needed to install mingw-w64-cross-gcc
-#   mingw-.-cross-.-manifest    needed to install mingw-w64-cross-gcc
-#   mingw-w64-cross-gcc       REDO   needed to build msys2-w32api-headers
-#   mingw-w64-cross-zlib
-#   msys2-w32api-headers
-#   msys2-w32api-runtime
+#   mingw-w64-cross-headers   REDO  needed to install mingw-w64-cross-gcc
+#   mingw-w64-cross-crt       Edit and REDO  needed to install mingw-w64-cross-gcc
+#   mingw-w64-cross-winpthreads Edit and REDO  needed to install mingw-w64-cross-gcc
+#   mingw-.-cross-.-manifest  Edit and REDO    needed to install mingw-w64-cross-gcc
+#   mingw-w64-cross-gcc       Edit and REDO   needed to build msys2-w32api-headers
+#   mingw-w64-cross-zlib      Edit and REDO
+#   msys2-w32api-headers      ?REDO
+#   msys2-w32api-runtime      ?REDO
 #   binutils                  REDO                                           build with nocheck
-#   windows-default-manifest
+#   windows-default-manifest  ?REDO
 #   gcc                       REDO
-#   libtool
+#   libtool                   ?REDO
 #   [run cleanup-selected-old-dlls.sh]
 #   binutils                  REDO                                          build with nocheck
-#   msys2-runtime-3.3         Doing
+#   msys2-runtime-3.3         REDO  FAILED NEEDS cross-mingw64
 #   [Exit and Restart Msys2]
 
 pkgbase=gcc
