--- a/mingw-w64-cross-zlib/PKGBUILD
+++ b/mingw-w64-cross-zlib/PKGBUILD
@@ -4,7 +4,7 @@ _realname=zlib
 _mingw_suff=mingw-w64-cross
 pkgbase="${_mingw_suff}-zlib"
 #_targetpkgs=("${_mingw_suff}-ucrt64-${_realname}" "${_mingw_suff}-mingw32-${_realname}" "${_mingw_suff}-mingw64-${_realname}" "${_mingw_suff}-mingwarm64-${_realname}")
-_targetpkgs=("${_mingw_suff}-mingw32-${_realname}")
+_targetpkgs=("${_mingw_suff}-mingw32-${_realname}" "${_mingw_suff}-mingw64-${_realname}")
 pkgname=("${_mingw_suff}-${_realname}" "${_targetpkgs[@]}")
 pkgdesc="Compression library implementing the deflate compression method found in gzip and PKZIP"
 pkgver=1.3.1
