gcc: Edit steps

--- a/gcc/PKGBUILD
+++ b/gcc/PKGBUILD
@@ -2,34 +2,38 @@
 # Contributor: Martell Malone <martellmalone@gmail.com>
 # Contributor: Ray Donnelly <mingw.android@gmail.com>
 
-# full toolchain build order:
-#   [install autotools_MSYS_packages] This might not be needed
-#   [run save-selected-old-dlls.sh] needed to save old ISL DLL
+# Initial build order:
+#   [install autotools_MSYS_packages]
+#   # Install packages needed
+#   pacman -S --needed binutils patch texinfo
 #   # It appears to be a path length or depth related build bug; the path of
 #   # C:\git_repos\MSYS2-packages\msys2-runtime-3.3 works.
-#   msys2-runtime-3.3           needed to build mingw-w64-cross-mingwarm64-binutils and python and it is easier to upgrade first
+#   msys2-runtime-3.3           needed to build mingw-w64-cross-mingwarm64-binutils and python 
+#                               and it is easier to upgrade first and very hard to upgrade it later
 #   [Exit and Restart Msys2]
+#   [run save-selected-old-dlls.sh] needed to save old ISL DLL
+#   libtool                     Fixes DLLs having cyg prefixes in some cases
 #   gmp
 #   mpfr
 #   mpc
-#   isl                       needed by both cross and regular gcc and maybe binutils
-#   [run save-selected-old-dlls.sh] needed to save new ISL DLL with cyg prefix
+#   isl                         needed by both cross and regular gcc and maybe binutils
 #   [run load-selected-old-dlls.sh]
-#   mingw-w64-cross-binutils  REDO   needed to build mingw-w64-cross-gcc     build with nocheck
-#   mingw-w64-cross-headers   REDO  needed to install mingw-w64-cross-gcc
-#   mingw-w64-cross-crt       Edit and REDO  needed to install mingw-w64-cross-gcc
-#   mingw-w64-cross-winpthreads Edit and REDO  needed to install mingw-w64-cross-gcc
-#   mingw-.-cross-.-manifest  Edit and REDO    needed to install mingw-w64-cross-gcc
-#   mingw-w64-cross-gcc       Edit and REDO   needed to build msys2-w32api-headers
-#   mingw-w64-cross-zlib      Edit and REDO
+#   mingw-w64-cross-binutils    needed to build mingw-w64-cross-gcc     build with nocheck
+#   mingw-w64-cross-headers     needed to install mingw-w64-cross-gcc
+#   mingw-w64-cross-crt         needed to install mingw-w64-cross-gcc
+#   mingw-w64-cross-winpthreads needed to install mingw-w64-cross-gcc
+#   mingw-.-cross-.-manifest    needed to install mingw-w64-cross-gcc
+#   mingw-w64-cross-gcc       REDOing   needed to build msys2-w32api-headers
+#   mingw-w64-cross-zlib      REDO
 #   msys2-w32api-headers      ?REDO
 #   msys2-w32api-runtime      ?REDO
 #   binutils                  REDO                                           build with nocheck
 #   windows-default-manifest  ?REDO
 #   gcc                       REDO
 #   libtool                   ?REDO
-#   [run cleanup-selected-old-dlls.sh]
+#   [ ls /usr/bin/cyg*.dll ]
 #   binutils                  REDO                                          build with nocheck
+#   [run cleanup-selected-old-dlls.sh]
 #   msys2-runtime-3.3         REDO  FAILED NEEDS cross-mingw64
 #   [Exit and Restart Msys2]
 
