--- a/xz/PKGBUILD
+++ b/xz/PKGBUILD
@@ -36,7 +36,7 @@ build() {
     --prefix=/usr \
     --enable-shared \
     --enable-static \
-    --enable-doxygen
+    --disable-doxygen
   make
   make DESTDIR="${srcdir}/dest" install
 }
